other minor design changes, working on fixing dashboard view

--- a/app/assets/stylesheets/module/_buttons.css.scss
+++ b/app/assets/stylesheets/module/_buttons.css.scss
@@ -76,7 +76,7 @@ button:hover {
   background-color: red;
   margin-top: 5%;
   display: inline-block;
-  color: #001aa5;;
+  color: #001aa5;
 }
 
 .favoriting {
@@ -85,7 +85,7 @@ button:hover {
 }
 
 .delete-comment {
-  background-color: $color-secondary;
+  background-color: #001aa5;
   width: 50%;
   margin: 0 auto;
   display: block;
