--- a/app/assets/stylesheets/module/_layout.css.scss
+++ b/app/assets/stylesheets/module/_layout.css.scss
@@ -111,9 +111,10 @@ label {
 }
 
 .thumbgallery {
-  width: 90%;
-  padding-top: 30px;
-  margin: 0 auto;
+//  width: 90%;
+//  padding-top: 30px;
+//  margin: 0 auto;
+  @include outer-container;
 }
 
 p {
