--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -6,7 +6,7 @@
 </div>
 <section class="clearfix thumbgallery full_column">
 <% @photos.each do |image| %>
-  <article class="image one_fourth">
+  <article class="image">
     <a href="/images/<%= image.id %>" class="single-image">
       <img src="<%= image.thumb %>"/>
     </a>
