Update styling and comment out JS

--- a/app/assets/stylesheets/module/_buttons.css.scss
+++ b/app/assets/stylesheets/module/_buttons.css.scss
@@ -1,8 +1,8 @@
 button {
-  color: #51a9ff;
+  background-color: transparent;
+  color: #000;
   margin: 0 auto;
   border-radius: 4px;
-  background-color: transparent;
   border: none;
   width: 100%;
 }
