--- a/app/assets/stylesheets/base/_variables.css.scss
+++ b/app/assets/stylesheets/base/_variables.css.scss
@@ -1,20 +1,1 @@
-$color-secondary: #f04200;
-
-%box-shadow-cmy {
-  box-shadow: -3px 2px 2px rgba(81, 169, 255, 0.8),
-  3px 3px 2px rgba(255, 15, 174, 0.80),
-  2px -3px 2px rgba(255, 251, 3, 0.80);
-}
-
-%text-shadow-cmy {
-  text-shadow: -5px 5px 2px rgba(81, 169, 255, 1),
-                5px 5px 2px rgba(255, 15, 174, 1),
-                0px -5px 2px rgba(255, 251, 3, 1);
-}
-
-
-.shadow {
-  box-shadow: -3px 2px 2px rgba(81, 169, 255, 0.8),
-  3px 3px 2px rgba(255, 15, 174, 0.80),
-  2px -3px 2px rgba(255, 251, 3, 0.80);
-}
+$color-secondary: #000;
