remove unecessary files and clean up show method in ImagesController.rb

--- a/app/assets/stylesheets/module/_buttons.css.scss
+++ b/app/assets/stylesheets/module/_buttons.css.scss
@@ -104,6 +104,7 @@ button:hover {
 .logout {
   background-color: #000;
   border-radius: 7%;
+  color: #FFF;
   cursor:pointer;
   display: block;
   float: right;
