--- a/app/assets/stylesheets/module/_typography.css.scss
+++ b/app/assets/stylesheets/module/_typography.css.scss
@@ -12,45 +12,45 @@
 
 div.wrapper h3 {
   color: #000;
-  letter-spacing: 2px;
   font-size: 100%;
- text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.30);
-  text-align: center;
   font-weight: 500;
-  margin-right: auto;
+  letter-spacing: 2px;
   margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.30);
   width: auto;
 }
 
 .welcome h3 {
-  text-align: left;
   color: #000;
   font-size: 130%;
   line-height: 110%;
+  text-align: left;
 }
 
 a:link {
-  color: #000;
+  color: #FFF;
   text-decoration: none;
   user-select: none;
-
 }
 
 a:visited {
-  color: #000;
+  color: #FFF;
   text-decoration: none;
   user-select: none;
 }
 
 a:hover {
-  color: rgb(157, 157, 157);
+  color: #868483;
   text-decoration: none;
 }
 
 h4 {
   text-align: center;
 }
+
 h5 {
-  text-align: center;
   color: #000;
+  text-align: center;
 }
