--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,9 @@
 $icon-font-path: "bootstrap-sass/assets/fonts/bootstrap/";
  @import "bootstrap-sass/assets/stylesheets/bootstrap-sprockets";
  @import "bootstrap-sass/assets/stylesheets/bootstrap";
+
+@import "modules/main/main";
+@import "modules/footer/footer";
+@import "modules/header/header";
+@import "modules/btns/btns";
+@import "modules/forms/forms";
