--- a/app/views/main/_signed_out.erb
+++ b/app/views/main/_signed_out.erb
@@ -1,36 +1,50 @@
-<a class="login">Log In</a>
-<a class="reg">Register</a>
-<section class="clearfix">
-  <div class="one_third reg_form" id="reg-form">
-    <%= form_for @user, url: register_path, html: { class: "register-form" } do |f| %>
-      <div>
-        <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true %>
-      </div>
-      <div>
-        <%= f.label :password %>
-        <%= f.password_field :password %>
-      </div>
-      <div>
-        <%= f.submit "Register", class: 'reg-btn' %>
-      </div>
-    <% end %>
+<button type="button" data-target=".register-form" class="btn btn_left" data-toggle="modal">Register</button>
+<button type="button" data-target=".login-form" class="btn" data-toggle="modal">Login</button>
+
+<section class="register-form modal fade" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content entry-form">
+      <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+      <%= form_for @user, url: register_path do |f| %>
+        <div class="form-group">
+          <%= f.label :email %>:
+          <br />
+          <%= f.email_field :email, autofocus: true %>
+        </div>
+        <div class="form-group">
+          <%= f.label :password %>:
+          <br />
+          <%= f.password_field :password %>
+        </div>
+        <div class="footer-modal">
+          <button type="button" class="btn btn_left" data-dismiss="modal">Close</button>
+          <%= f.submit "Register", class: 'btn' %>
+        </div>
+      <% end %>
+    </div>
   </div>
 </section>
-<section class="clearfix">
-  <div class="one_third login_form" id="login-form">
-    <%= form_for @user, url: signin_path, html: { class: "signin-form" } do |f| %>
-      <div>
-        <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true %>
-      </div>
-      <div>
-        <%= f.label :password %>
-        <%= f.password_field :password %>
-      </div>
-      <div>
-        <%= f.submit "Login", class: 'login-btn' %>
-      </div>
-    <% end %>
+
+<section class="login-form modal fade" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content entry-form">
+      <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+      <%= form_for @user, url: signin_path do |f| %>
+        <div class="form-group">
+          <%= f.label :email %>:
+          <br />
+          <%= f.email_field :email, autofocus: true %>
+        </div>
+        <div class="form-group">
+          <%= f.label :password %>:
+          <br />
+          <%= f.password_field :password %>
+        </div>
+        <div class="footer-modal">
+          <button type="button" class="btn btn_left" data-dismiss="modal">Close</button>
+          <%= f.submit "Login", class: 'btn' %>
+        </div>
+      <% end %>
+    </div>
   </div>
 </section>
