Remove unused images and add styling

--- a/app/assets/stylesheets/modules/footer/_footer.css.scss
+++ b/app/assets/stylesheets/modules/footer/_footer.css.scss
@@ -1,6 +1,8 @@
 .footer {
-  margin: 2rem auto;
+  margin: 2rem auto 0 auto;
   text-align: center;
+  background-color: black;
+  padding: 1rem;
 }
 
 .footer-logo {
