--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
           </nav>
         </div>
         <div class="col-sm-2 col-sm-offset-4 lm-logo-wrapper">
-          <a href="/"><%= image_tag "lg1Lessbright.png", class: 'site_logo' %></a>
+          <a href="/"><%= image_tag "full-black.png", class: 'site_logo' %></a>
         </div>
         <div class="col-sm-3 col-sm-offset-2">
           <div class="session-actions">
