--- a/app/views/main/_signed_out.erb
+++ b/app/views/main/_signed_out.erb
@@ -9,12 +9,12 @@
         <div class="form-group">
           <%= f.label :email %>:
           <br />
-          <%= f.email_field :email, autofocus: true %>
+          <%= f.email_field :email, autofocus: true, class: 'textInput' %>
         </div>
         <div class="form-group">
           <%= f.label :password %>:
           <br />
-          <%= f.password_field :password %>
+          <%= f.password_field :password, class: 'textInput' %>
         </div>
         <div class="footer-modal">
           <button type="button" class="btn btn_left" data-dismiss="modal">Close</button>
@@ -33,12 +33,12 @@
         <div class="form-group">
           <%= f.label :email %>:
           <br />
-          <%= f.email_field :email, autofocus: true %>
+          <%= f.email_field :email, autofocus: true, class: 'textInput' %>
         </div>
         <div class="form-group">
           <%= f.label :password %>:
           <br />
-          <%= f.password_field :password %>
+          <%= f.password_field :password, class: 'textInput' %>
         </div>
         <div class="footer-modal">
           <button type="button" class="btn btn_left" data-dismiss="modal">Close</button>
