Update styling and logic for favorites and styling for comments on single image view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,3 +7,4 @@ $icon-font-path: "bootstrap-sass/assets/fonts/bootstrap/";
 @import "modules/header/header";
 @import "modules/btns/btns";
 @import "modules/forms/forms";
+@import "modules/images/images";
