--- a/app/assets/stylesheets/modules/main/_main.scss
+++ b/app/assets/stylesheets/modules/main/_main.scss
@@ -23,4 +23,9 @@
 .singleImageView {
   display: block;
   margin: 3rem auto;
+  max-width: 100%;
+}
+
+.thumbgallery {
+  padding-bottom: 10rem;
 }
