--- a/app/assets/stylesheets/modules/footer/_footer.scss
+++ b/app/assets/stylesheets/modules/footer/_footer.scss
@@ -3,6 +3,9 @@
   text-align: center;
   background-color: black;
   padding: 1rem;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
 }
 
 .footer-logo {
