--- a/app/assets/stylesheets/modules/header/header.scss
+++ b/app/assets/stylesheets/modules/header/header.scss
@@ -1,3 +1,11 @@
+.header {
+  background-color: rgba(255,255,255, .95);
+  padding: 1rem 0;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+}
+
 .menu_logo {
   width: 3rem;
 }
@@ -7,17 +15,15 @@
 }
 
 .lm-logo-wrapper {
-  margin-top: 2rem;
   text-align: center;
 }
 
 .session-actions {
   float: right;
-  margin: 2rem 0 0 0;
 }
 
 .nav {
-  margin: .5rem 0 0 3.4rem;
+  margin: .5rem 0 0 1.4rem;
   min-width: 10rem;
 }
 
