--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -79,7 +79,7 @@
         <% end %>
       </div>
     </div>
-    <div class="col-sm-9">
+    <div class="col-sm-8 col-sm-offset-1">
       <img src="<%= @image.url %>" alt="" class="singleImageView"/>
     </div>
   </div>
