--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -8,12 +8,14 @@
     </div>
   </div>
   <section class="thumbgallery">
-  <% @photos.each do |image| %>
-    <div class="col-sm-2 col-md-2 col-lg-2 col-xl-2">
-      <a href="/images/<%= image.id %>">
-        <img src="<%= image.thumb %>"/ class="grid-image">
-      </a>
+    <div class="row">
+      <% @photos.each do |image| %>
+        <div class="col-sm-2 col-md-2 col-lg-2 col-xl-2">
+          <a href="/images/<%= image.id %>">
+            <img src="<%= image.thumb %>"/ class="grid-image">
+          </a>
+        </div>
+      <% end %>
     </div>
-  <% end %>
   </section>
 </div>
