Add favorite count, add single image styleing

--- a/app/assets/stylesheets/modules/images/_images.scss
+++ b/app/assets/stylesheets/modules/images/_images.scss
@@ -13,3 +13,13 @@
 .singleImageWrapper {
   margin: 6rem 0;
 }
+
+.new_favorite, .favorited, .favoriteCount {
+  display: inline-block;
+}
+
+.comment-card {
+  border: 1px solid black;
+  border-radius: 3px;
+  padding: 1rem;
+}
