--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -10,9 +10,9 @@
   <section class="thumbgallery">
     <div class="row">
       <% @photos.each do |image| %>
-        <div class="col-sm-2 col-md-2 col-lg-2 col-xl-2">
+        <div class="col-xs-6 col-sm-2 col-md-2 col-lg-2 col-xl-2">
           <a href="/images/<%= image.id %>">
-            <img src="<%= image.thumb %>"/ class="grid-image">
+            <img src="<%= image.thumb %>" class="grid-image">
           </a>
         </div>
       <% end %>
